[gd_scene load_steps=21 format=3 uid="uid://dlnfoe38vgqp"]

[ext_resource type="Script" path="res://Scripts/zombie.gd" id="1_nufbr"]
[ext_resource type="Texture2D" uid="uid://b8pq6qidjnu7s" path="res://animations/zombie1_anim/zombie1_anim1.png" id="2_rrkpq"]
[ext_resource type="Texture2D" uid="uid://cqk37qyu6nmpi" path="res://animations/zombie1_anim/zombie1_anim2.png" id="3_5mong"]
[ext_resource type="Texture2D" uid="uid://c00ttn4dcf4q7" path="res://animations/zombie1_anim/zombie1_anim3.png" id="4_dnhn5"]
[ext_resource type="Texture2D" uid="uid://dtr0i7duttcpx" path="res://animations/zombie1_anim/zombie1_anim4.png" id="5_m6qqn"]
[ext_resource type="Texture2D" uid="uid://cn4q366721di" path="res://animations/zombie1_attack/zombie_attack4.png" id="5_tgf1r"]
[ext_resource type="Texture2D" uid="uid://p5u6t0t3l6hj" path="res://animations/zombie1_attack/zombie_attack5.png" id="6_gn0ud"]
[ext_resource type="Texture2D" uid="uid://jyqhpmhwhsj7" path="res://animations/zombie1_anim/zombie1_anim5.png" id="6_y01m2"]
[ext_resource type="Texture2D" uid="uid://b4ti8wiuowku7" path="res://animations/zombie1_attack/zombie_attack6.png" id="7_c5mho"]
[ext_resource type="Texture2D" uid="uid://bry3usdvkvc4p" path="res://animations/zombie1_anim/zombie1_anim6.png" id="7_ypa4v"]
[ext_resource type="Texture2D" uid="uid://cy446at4m57xd" path="res://animations/zombie1_attack/zombie_attack7.png" id="8_8nddg"]
[ext_resource type="Texture2D" uid="uid://dj1rb0nphoskk" path="res://animations/zombie1_anim/zombie1_anim7.png" id="8_qkqcm"]
[ext_resource type="Texture2D" uid="uid://cloeilsxd0225" path="res://animations/zombie1_attack/zombie_attack8.png" id="9_5awjk"]
[ext_resource type="AudioStream" uid="uid://dxfxf1op5vcac" path="res://audio/zombie/zombie_walk.mp3" id="14_q3xsd"]
[ext_resource type="AudioStream" uid="uid://l82nv4xxfb8m" path="res://audio/zombie/zombie_attack1.mp3" id="15_tijjp"]
[ext_resource type="AudioStream" uid="uid://cvun8lh7arxtf" path="res://audio/zombie/zombie_attack2.mp3" id="16_v51ls"]

[sub_resource type="SpriteFrames" id="SpriteFrames_il1rs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_tgf1r")
}, {
"duration": 1.0,
"texture": ExtResource("6_gn0ud")
}, {
"duration": 1.0,
"texture": ExtResource("7_c5mho")
}, {
"duration": 1.0,
"texture": ExtResource("8_8nddg")
}, {
"duration": 1.0,
"texture": ExtResource("9_5awjk")
}],
"loop": true,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5mong")
}, {
"duration": 1.0,
"texture": ExtResource("2_rrkpq")
}, {
"duration": 1.0,
"texture": ExtResource("4_dnhn5")
}, {
"duration": 1.0,
"texture": ExtResource("3_5mong")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rrkpq")
}, {
"duration": 1.0,
"texture": ExtResource("3_5mong")
}, {
"duration": 1.0,
"texture": ExtResource("4_dnhn5")
}, {
"duration": 1.0,
"texture": ExtResource("5_m6qqn")
}, {
"duration": 1.0,
"texture": ExtResource("6_y01m2")
}, {
"duration": 1.0,
"texture": ExtResource("7_ypa4v")
}, {
"duration": 1.0,
"texture": ExtResource("8_qkqcm")
}, {
"duration": 1.0,
"texture": ExtResource("6_y01m2")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kyf3b"]
radius = 71.1667
height = 211.333

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlgub"]
size = Vector2(207, 212)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xa0h1"]
size = Vector2(57.3333, 210.667)

[node name="Zombie" type="CharacterBody2D" groups=["zombie"]]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_nufbr")
speed = 200.0

[node name="Zombie03" type="AnimatedSprite2D" parent="."]
position = Vector2(1.33333, -2)
sprite_frames = SubResource("SpriteFrames_il1rs")
animation = &"walk"
autoplay = "walk"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("CapsuleShape2D_kyf3b")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.705, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.5, -1)
shape = SubResource("RectangleShape2D_xlgub")
debug_color = Color(0.996896, 0, 0.318943, 0.42)

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="BulletZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletZone"]
position = Vector2(-0.666668, -0.666667)
scale = Vector2(2.4, 1)
shape = SubResource("RectangleShape2D_xa0h1")

[node name="zombie_walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_q3xsd")
max_distance = 800.0

[node name="zombie_hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_tijjp")

[node name="zombie_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_v51ls")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="area_entered" from="BulletZone" to="." method="_on_bullet_zone_area_entered"]
[connection signal="finished" from="zombie_walk" to="." method="_on_zombie_walk_finished"]
